[metadata]
name = sphinxcontrib-hydomain
version = 0.1.0
url = https://github.com/hylang/sphinxcontrib-hydomain
license = BSD
author = Allison Casey and Kodi B. Arfer
author_email = alliecasey21@gmail.com
description = Sphinx domain for documenting Hy code bases
long_description = file: README
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Documentation
    Topic :: Utilities

[options]
packages = find_namespace:
python_requires = >= 3.11
include_package_data = True
install_requires =
    Sphinx >= 4.2
    hy@git+https://github.com/hylang/hy@master#egg

[options.packages.find]
include = sphinxcontrib

[options.extras_require]
dev =
    bump2version == 1.0.1
    flake8 == 3.8.4
    pytest == 6.2.2
    sphinx_rtd_theme
    pre-commit

[aliases]
upload_docs = build_sphinx upload_docs

[bdist_wheel]
universal = 1

[upload_docs]
repository=https://pypi.python.org/pypi
upload_dir=build/sphinx/html

[flake8]
max-line-length = 88
extend-ignore = E203

[isort]
profile = black
